# Fix-Firefox-Launcher

./: .gitignore  Cargo.toml  README.md  install.cmd  uninstall.cmd
src/: main.rs
