[package]
name = "fix_firefox_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.10"            # https://crates.io/crates/winreg
windows-service = "0.4"     # https://crates.io/crates/windows-service
eventlog = "0.1"            # https://crates.io/crates/eventlog
log = "0.4"                 # https://crates.io/crates/log
regex = "1.5"               # https://crates.io/crates/regex
argmap = "1.1"              # https://crates.io/crates/argmap
